--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Home: index.md
   - Workflow:
       - Overview: workflow/index.md
+      - Variables: workflow/variables.md
       - Receiver Activities: workflow/receiver-activities/index.md
       - Sender Activities:
           - Overview: workflow/sender-activities/index.md
