--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs mkdocs-material
+           pip install mkdocs mkdocs-material mkdocs-awesome-pages-plugin
 
       - name: Build site
         run: mkdocs build
