--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,3 +38,7 @@ plugins:
 
 extra_css:
   - assets/stylesheets/extra.css
+
+extra_javascript:
+- https://unpkg.com/mermaid@10/dist/mermaid.min.js
+- javascripts/mermaid-init.js
